A bit more cleaner ui
Add hover
Add transition effect
Change some button
Change the loading screen

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
-    "version": "2.0.7",
-    "description": "Launcher Mincraft pour le serveur Selvania",
+    "name": "Phenix-Launcher",
+    "preductname": "Phénix Launcher",
+    "version": "3.0.0",
+    "description": "Phénix moddé v3 launcher",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
-        "url": "https://github.com/luuxis"
+        "name": "Xertien",
+        "email": "contact@noet.ovh",
+        "url": "https://github.com/Xertien"
     },
-    "url": "http://launcher.luuxis.fr",
+    "url": "https://launchermodded.phe-go.com",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
         "build": "node build.js --obf=true --build=platform",
-        "icon": "node build.js --icon=https://raw.githubusercontent.com/luuxis/Selvania-Launcher/master/src/assets/images/icon.png"
+        "icon": "node build.js --icon=https://raw.githubusercontent.com/Xertien/Phenix-Launcher-v3/refs/heads/main/src/assets/images/icon.png"
     },
     "license": "CCANC",
     "nodemonConfig": {
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/Xertien/Phenix-Launcher-v3.git"
     }
 }
