--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://launchermodded.phe-go.com",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
+        "start-menu-test": "electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
         "build": "node build.js --obf=true --build=platform",
         "icon": "node build.js --icon=https://raw.githubusercontent.com/Xertien/Phenix-Launcher/refs/heads/master/src/assets/images/icon.png"
